--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"unit:watch": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --watch",
 		"e2e": "node test/e2e/runner.js",
 		"test": "npm run unit && npm run e2e",
+		"postinstall": "npm run build",
 		"start": "node server.js"
 	},
 	"dependencies": {
