--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
     },
     // https://github.com/feross/standard/blob/master/RULES.md#javascript-standard-style
     "extends": "eslint:recommended",
+    "plugin": "vue/recommended",
     // required to lint *.vue files
     "plugins": [
         "html"
