--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,27 +19,7 @@
         "no-unused-vars": "warn",
         "constructor-super": "warn",
         "valid-typeof": "warn",
-        "no-console": 0,
-        // "linebreak-style": [
-        //     2
-        //     // "windows"
-        // ],
-        "indent": [
-            "warn",
-            "tab"
-        ],
-        "linebreak-style": [
-            2,
-            "windows"
-        ],
-        "quotes": [
-            "warn",
-            "single"
-        ],
-        "semi": [
-            "warn",
-            "always"
-        ]
+        "no-console": 0
     },
     // https://github.com/feross/standard/blob/master/RULES.md#javascript-standard-style
     "extends": "eslint:recommended",
