--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "bootstrap": "^3.3.7",
     "chartist": "^0.10.1",
     "v-click-outside": "0.0.8",
