--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "extends": "plugin:vue/base",
     "env": {
         "browser": true,
         "commonjs": true,
@@ -20,10 +21,5 @@
         "constructor-super": "warn",
         "valid-typeof": "warn",
         "no-console": 0
-    },
-    "extends": "eslint:recommended",
-    "plugin": "vue/recommended",
-    "plugins": [
-        "html"
-    ]
+    }
 }
