--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "plugin:vue/base",
+    "extends": "plugin:vue/essential",
     "env": {
         "browser": true,
         "commonjs": true,
