--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chartist": "^0.10.1",
     "v-click-outside": "0.0.8",
     "vue": "^2.3.0",
+    "vue-notification": "^1.3.6",
     "vue-router": "^2.2.0",
     "vue-spinner": "^1.0.3"
   },
