--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.17.0",
     "bootstrap": "^3.3.7",
     "chartist": "^0.10.1",
+    "lodash.debounce": "^4.0.8",
     "v-click-outside": "0.0.8",
     "vue": "^2.3.0",
     "vue-notification": "^1.3.6",
