--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^2.3.0",
     "vue-notification": "^1.3.6",
     "vue-router": "^2.2.0",
-    "vue-spinner": "^1.0.3"
+    "vue-spinner": "^1.0.3",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
