--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-notification": "^1.3.6",
     "vue-router": "^2.2.0",
     "vue-spinner": "^1.0.3",
-    "vue-the-mask": "^0.11.1"
+    "vue-the-mask": "^0.11.1",
+    "vue2-editor": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
