--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "v-click-outside": "0.0.8",
     "vue": "^2.3.0",
     "vue-notification": "^1.3.6",
+    "vue-picture-input": "^2.1.1",
     "vue-router": "^2.2.0",
     "vue-the-mask": "^0.11.1",
     "vue2-editor": "^2.4.2",
