--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass-loader": "^6.0.6",
     "v-click-outside": "^1.0.2",
     "vue": "^2.5.2",
+    "vue-event-calendar": "^1.5.2",
     "vue-notification": "^1.3.7",
     "vue-picture-input": "^2.1.1",
     "vue-router": "^3.0.1",
