--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-notification": "^1.3.7",
     "vue-picture-input": "^2.1.1",
     "vue-router": "^3.0.1",
+    "vue-select": "^2.4.0",
     "vue-the-mask": "^0.11.1",
     "vue2-editor": "^2.4.2",
     "vuejs-dialog": "^0.6.1"
