--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "3.3.7",
+    "cep-promise": "^3.0.0",
     "chartist": "^0.11.0",
     "epic-spinners": "^1.0.2",
     "lodash.debounce": "^4.0.8",
