--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass-loader": "^6.0.6",
     "v-click-outside": "^1.0.2",
     "vue": "^2.5.2",
+    "vue-content-loading": "^1.4.0",
     "vue-fullcalendar": "^1.0.9",
     "vue-picture-input": "^2.1.1",
     "vue-router": "^3.0.1",
