adding animated number

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animated-number-vue": "^0.0.2",
     "axios": "^0.18.0",
     "bootstrap": "3.3.7",
     "cep-promise": "^3.0.0",
