--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^2.5.2",
     "vue-content-loading": "^1.4.0",
     "vue-fullcalendar": "^1.0.9",
+    "vue-js-modal": "^1.3.12",
     "vue-picture-input": "^2.1.1",
     "vue-router": "^3.0.1",
     "vue-select": "^2.4.0",
