--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: node_js
-
 node_js:
-  - '8.9.4'
-
+- 8.9.4
 cache:
   yarn: true
   directories:
-    - node_modules
-
+  - node_modules
 script:
-  - yarn lint
-  - yarn build
-
+- yarn lint
+- yarn build
 deploy:
   provider: surge
   skip_cleanup: true
-  project: ./dist/
+  project: "./dist/"
   domain: gestao-paroquial.surge.sh
+before_install:
+- openssl aes-256-cbc -K $encrypted_0aa1b4300bcd_key -iv $encrypted_0aa1b4300bcd_iv
+  -in deploy.enc -out /temp/deploy -d
