--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ deploy:
   script: bash ./scripts/deploy.sh
 before_install:
 - openssl aes-256-cbc -K $encrypted_0aa1b4300bcd_key -iv $encrypted_0aa1b4300bcd_iv
-  -in deploy.enc -out /temp/deploy -d
+  -in deploy.enc -out /tmp/deploy -d
