--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chartist": "^0.11.0",
     "epic-spinners": "^1.0.2",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.22.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "v-click-outside": "^1.0.2",
