--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "bootstrap": "3.3.7",
     "cep-promise": "^3.0.0",
+    "chart.js": "^2.7.2",
     "chartist": "^0.11.0",
     "epic-spinners": "^1.0.2",
     "lodash.debounce": "^4.0.8",
@@ -27,6 +28,7 @@
     "sass-loader": "^6.0.6",
     "v-click-outside": "^1.0.2",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.3.1",
     "vue-content-loading": "^1.4.0",
     "vue-fullcalendar": "^1.0.9",
     "vue-js-modal": "^1.3.12",
