--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vue-router": "^3.0.1",
     "vue-select": "^2.4.0",
     "vue-the-mask": "^0.11.1",
-    "vuejs-dialog": "^0.6.1"
+    "vuejs-dialog": "^0.6.1",
+    "vuejs-paginate": "^1.9.0"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.12",
